

3.0.8
Improvements:
/teama reload works under more circumstances
Team prefix can is editable in messages.yml (https://github.com/booksaw/BetterTeams/issues/6)
/team chat messages can now be logged to the console

Bug Fixes: 
Fixed team chat priority issue (https://github.com/booksaw/BetterTeams/issues/5)

3.0.9
Features: 
/team commands can now have a cooldown or price associated with them, this is configured within team.yml

Added /teama chatspy to spy on messages sent to team chats
Added /team title <player/me> <title> to set the title of that team 
Added /team top to view the leaderboard of teams based on their score
Added /team rank to view a teams rank 
Added /team delhome to delete your teams home
Added /teama title <player> <title> to force a player to have a set title
Added /teama version to view the plugin version
Added /teama home <team> to teleport to a teams home

Improvements:
Added a placeholder for team rank (%betterteams_rank%)
Players rank in team is now displayed in team chat (via '*' for admins and '**' for owners). This can be changed or disabled in messages.yml
Separated the permission nodes for /team unban, /team sethome and /team demote from other commands. 
Added an option to disable toggeling team chat, this should be used if your chat manager is not detecting messages to team chats are cancelled from the main chat

Bug Fixes: 
Fixed a bug where if HolographicDisplays is present but not enabled on the server, errors appear in the console. 
Fixed a bug where tridents could still be used to damage team members. 


3.0.10
Bug Fixes:
Fixed a problem where errors are logged to console when holographic displays is not on the server


3.1.0
Features: 


Improvements:
Commands and cooldowns only activate if the command is successful

Bug Fixes: 

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
Add command cost and cooldown to documentation 




Headings: 
Features: 


Improvements:


Bug Fixes: 
